--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,26 +27,13 @@ jobs:
     - name: Display Python version
       run: python --version
     
-    - name: Install dependencies
+    - name: List project files
       run: |
-        python -m pip install --upgrade pip
-        
-    - name: Run unit tests for Circle
-      run: |
-        python -m unittest test_geometry.TestCircle -v
+        echo "Project structure:"
+        ls -la
+        echo "Python files:"
+        find . -name "*.py" -type f
     
-    - name: Run unit tests for Rectangle
+    - name: Discover and run all tests
       run: |
-        python -m unittest test_geometry.TestRectangle -v
-    
-    - name: Run unit tests for Square
-      run: |
-        python -m unittest test_geometry.TestSquare -v
-    
-    - name: Run unit tests for Triangle
-      run: |
-        python -m unittest test_geometry.TestTriangle -v
-    
-    - name: Run all tests together
-      run: |
-        python -m unittest test_geometry -v
+        python -m unittest discover -s . -p "test_*.py" -v
